# indust-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
graph_calc_lib/: CMakeLists.txt  calc.cpp  graph_calc.h
inp/: test.txt
set_graph_lib/: CMakeLists.txt  set_graph.cpp  set_graph.h
test/: CMakeLists.txt  test.py  test_graph_calc.cpp
tests/: main.cpp
