cmake_minimum_required(VERSION 3.0.0)
project(set_graph)

file(GLOB SOURCES set_graph.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(SET_GRAPH_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(SET_GRAPH_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
